frontend: Extracted the app name to an environment variable to be able to reuse it everythere. Added app icons.

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sui dApp Starter</title>
+    <title>%VITE_APP_NAME%</title>
+    
+    <!-- Icons are generated with https://realfavicongenerator.net/ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4da2ff">
+    <meta name="msapplication-TileColor" content="#242424">
+    <meta name="theme-color" content="#242424">
   </head>
   <body>
     <div id="root"></div>
