--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_NAME%</title>
+    <meta name="description" content="%VITE_APP_DESCRIPTION%" />
     
     <!-- Icons are generated with https://realfavicongenerator.net/ -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
