--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_NAME%</title>
     <meta name="description" content="%VITE_APP_DESCRIPTION%" />
-    
+
     <!-- Icons are generated with https://realfavicongenerator.net/ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4da2ff">
-    <meta name="msapplication-TileColor" content="#242424">
-    <meta name="theme-color" content="#242424">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4da2ff" />
+    <meta name="msapplication-TileColor" content="#242424" />
+    <meta name="theme-color" content="#242424" />
   </head>
   <body>
     <div id="root"></div>
